# mapbox-vector-tile

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
mapbox_vector_tile/: __init__.py  compat.py  decoder.py  encoder.py  geom_encoder.py  polygon.py
mapbox_vector_tile/Mapbox/: vector_tile_p3_pb2.py
mapbox_vector_tile/speedups/: encode_py.cpp
tests/: test_decoder.py  test_encoder.py  test_polygon.py
