[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mapbox-vector-tile-mappy"
version = "1.0.10"
description = "Mapbox Vector Tile - Python library for encoding and decoding Mapbox vector tiles"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["mapbox", "vector", "tile", "gis", "geospatial"]
authors = [{name = "Mappy Team", email = "dt.lbs.map@mappy.com"}]
license = "MIT"
urls = {Homepage = "http://fr.mappy.com/"}
requires-python = ">= 3.11"
dependencies = [
    "protobuf",
    "shapely",
    "pyclipper"
]

[tool.setuptools]
packages = ["mapbox_vector_tile"]
include-package-data = true
zip-safe = false
